<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="lesson_11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2jf-Ct-QnQ">
                                <rect key="frame" x="67.5" y="248.5" width="240" height="170"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pE0-nm-I1h">
                                        <rect key="frame" x="0.0" y="0.0" width="39" height="17"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sUd-Sk-gtf">
                                        <rect key="frame" x="0.0" y="25" width="240" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="EmailTextfield"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passowrd:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iR0-yZ-gsT">
                                        <rect key="frame" x="0.0" y="67" width="67" height="17"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAe-KD-zu5">
                                        <rect key="frame" x="0.0" y="92" width="240" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordTextfield"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWi-zB-wRm">
                                        <rect key="frame" x="0.0" y="134" width="240" height="30"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LoginButton"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstItem="OWi-zB-wRm" firstAttribute="top" secondItem="XAe-KD-zu5" secondAttribute="bottom" constant="8" id="2GP-Tb-i2t"/>
                                    <constraint firstItem="XAe-KD-zu5" firstAttribute="leading" secondItem="2jf-Ct-QnQ" secondAttribute="leading" id="3O1-Iz-5hZ"/>
                                    <constraint firstItem="sUd-Sk-gtf" firstAttribute="top" secondItem="pE0-nm-I1h" secondAttribute="bottom" constant="8" id="BYL-GN-aSH"/>
                                    <constraint firstAttribute="height" constant="170" id="O5F-ng-RZd"/>
                                    <constraint firstItem="XAe-KD-zu5" firstAttribute="top" secondItem="iR0-yZ-gsT" secondAttribute="bottom" constant="8" id="P3k-cm-uPk"/>
                                    <constraint firstAttribute="trailing" secondItem="XAe-KD-zu5" secondAttribute="trailing" id="QYo-WC-VEs"/>
                                    <constraint firstItem="OWi-zB-wRm" firstAttribute="leading" secondItem="2jf-Ct-QnQ" secondAttribute="leading" id="Ug6-48-329"/>
                                    <constraint firstItem="iR0-yZ-gsT" firstAttribute="top" secondItem="sUd-Sk-gtf" secondAttribute="bottom" constant="8" id="VTZ-4F-ejF"/>
                                    <constraint firstAttribute="width" constant="240" id="X4y-l4-14Q"/>
                                    <constraint firstAttribute="trailing" secondItem="OWi-zB-wRm" secondAttribute="trailing" id="ZNh-cA-t8t"/>
                                    <constraint firstAttribute="trailing" secondItem="sUd-Sk-gtf" secondAttribute="trailing" id="daJ-Ej-lvV"/>
                                    <constraint firstItem="iR0-yZ-gsT" firstAttribute="leading" secondItem="2jf-Ct-QnQ" secondAttribute="leading" id="dak-na-48c"/>
                                    <constraint firstItem="sUd-Sk-gtf" firstAttribute="leading" secondItem="2jf-Ct-QnQ" secondAttribute="leading" id="dph-2Y-C2U"/>
                                    <constraint firstItem="pE0-nm-I1h" firstAttribute="leading" secondItem="2jf-Ct-QnQ" secondAttribute="leading" id="g3O-jD-zYv"/>
                                    <constraint firstItem="pE0-nm-I1h" firstAttribute="top" secondItem="2jf-Ct-QnQ" secondAttribute="top" id="kdc-xv-dSg"/>
                                </constraints>
                            </view>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Format error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3S-Mz-cwe">
                                <rect key="frame" x="68" y="426" width="240" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="ResultMessageLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="0om-rk-sJ1"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="Email"/>
                        <constraints>
                            <constraint firstItem="2jf-Ct-QnQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2Jz-c6-FSA"/>
                            <constraint firstItem="o3S-Mz-cwe" firstAttribute="top" secondItem="2jf-Ct-QnQ" secondAttribute="bottom" constant="7.5" id="4Nf-DH-4Dn"/>
                            <constraint firstItem="o3S-Mz-cwe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="68" id="WxX-BN-e8o"/>
                            <constraint firstItem="2jf-Ct-QnQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nR8-RD-IlT"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o3S-Mz-cwe" secondAttribute="trailing" constant="67" id="nzS-u0-bTd"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="emailTextfield" destination="sUd-Sk-gtf" id="wTX-UV-TZh"/>
                        <outlet property="loginButton" destination="OWi-zB-wRm" id="pm8-SA-gk6"/>
                        <outlet property="passwordTextField" destination="XAe-KD-zu5" id="RGx-b4-kxC"/>
                        <outlet property="resultMessageLabel" destination="o3S-Mz-cwe" id="STI-fv-3MH"/>
                        <segue destination="b3j-me-QSi" kind="presentation" identifier="LoginSuccess" modalPresentationStyle="fullScreen" id="7fs-bc-Leq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="138.40000000000001" y="112.89355322338831"/>
        </scene>
        <!--User View Controller-->
        <scene sceneID="5MX-ja-5lM">
            <objects>
                <viewController id="b3j-me-QSi" customClass="UserViewController" customModule="lesson_11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="aC6-EW-aEH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congratulations" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9z-ir-45t">
                                <rect key="frame" x="127" y="323" width="121" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2z-ig-S1K">
                                <rect key="frame" x="16" y="20" width="52" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Log out"/>
                                <connections>
                                    <action selector="logOut:" destination="b3j-me-QSi" eventType="touchUpInside" id="umm-Za-6if"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="iLV-tu-vb7"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="U9z-ir-45t" firstAttribute="centerY" secondItem="aC6-EW-aEH" secondAttribute="centerY" id="I6p-VM-Zfm"/>
                            <constraint firstItem="U9z-ir-45t" firstAttribute="centerX" secondItem="aC6-EW-aEH" secondAttribute="centerX" id="SvO-G2-JXs"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="v7G-cY-jX4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="913" y="113"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemBlueColor">
            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
